[package]
name = "xsd10"
version = "0.1.0"
authors = ["Chris Bruce <chris@lumeo.com>", "leonid.krutovsky <leonid.krutovsky@quantumsoft.ru>", "DmitrySamoylov <dmitry.samoylov@quantumsoft.ru>", "victor-soloviev <victor.soloviev@quantumsoft.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xsd10"
path = "src/lib.rs"


[dependencies]
roxmltree = "0.10.1"
Inflector = "*"
chrono = "0.4.10"
num-bigint = "0.2.6"
bigdecimal = "0.1.0"
regex = "1"
hex = "0.4"
base64 = "*"
lazy_static = "1.4.0"
xml-utils = { path = "../../xml-utils" }
